[project]
name = "hexlet-code"
version = "0.1.0"
description = "A collection of educational math games"
authors = [
    { name = "Carlos Saul Villabona", email = "cvillabona353@unab.edu.co" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt>=0.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

[dependency-groups]
dev = [
    "ruff>=0.15.21",
]

[project.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calculate:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"